--- a/pages/about.html
+++ b/pages/about.html
@@ -15,14 +15,16 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../public//vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../public//vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../public//vendor/aos/aos.css" rel="stylesheet">
-  <link href="../public//vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="../public//vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../vendor/aos/aos.css" rel="stylesheet">
+  <link href="../vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <!-- Main CSS File -->
   <link href="../css/main.css" rel="stylesheet">
 
@@ -38,7 +40,8 @@
 <body class="about-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div
+      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
@@ -46,18 +49,19 @@
         <h1 class="sitename">WordlAgency</h1>
       </a>
 
-       <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="/pages/about.html">Sobre Nosotros</a></li>
-          <li><a href="/pages/destinations.html">Destinos</a></li>
-          <li><a href="/pages/tours.html">Tours</a></li>
-          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
+          <li><a href="about.html" class="active">Sobre Nosotros</a></li>
+          <li><a href="destinations.html">Destinos</a></li>
+          <li><a href="tours.html">Tours</a></li>
+          <li><a href="login.html">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
+          class="badge bg-danger">2</span></a>
 
       <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
 
@@ -67,10 +71,12 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(/assets/img/travel/showcase-8.webp);">
+    <div class="page-title dark-background" data-aos="fade"
+      style="background-image: url(/assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
         <h1>About</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
+        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
+          molestias.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="../index.html">Home</a></li>
@@ -89,7 +95,8 @@
           <div class="col-lg-8 mx-auto text-center mb-5">
             <div class="intro-content" data-aos="fade-up" data-aos-delay="200">
               <h2>Redefining Travel,<br>One Adventure at a Time</h2>
-              <p class="lead">Born from a love of exploration and discovery, we've spent the last decade turning wanderlust into life-changing experiences for adventurous souls around the globe.</p>
+              <p class="lead">Born from a love of exploration and discovery, we've spent the last decade turning
+                wanderlust into life-changing experiences for adventurous souls around the globe.</p>
             </div>
           </div>
         </div>
@@ -118,8 +125,13 @@
                 <span>Our Story</span>
               </div>
               <h3>Where Passion Meets Purpose</h3>
-              <p>What started as weekend camping trips among college friends has evolved into a global network of travel enthusiasts dedicated to creating extraordinary journeys. We believe travel isn't just about seeing new places – it's about connecting with cultures, supporting communities, and discovering parts of yourself you never knew existed.</p>
-              <p>Every expedition we craft is infused with respect for local traditions and a commitment to leaving places better than we found them. Our team of cultural ambassadors and adventure specialists work hand-in-hand with indigenous guides to offer you authentic experiences that most tourists never see.</p>
+              <p>What started as weekend camping trips among college friends has evolved into a global network of travel
+                enthusiasts dedicated to creating extraordinary journeys. We believe travel isn't just about seeing new
+                places – it's about connecting with cultures, supporting communities, and discovering parts of yourself
+                you never knew existed.</p>
+              <p>Every expedition we craft is infused with respect for local traditions and a commitment to leaving
+                places better than we found them. Our team of cultural ambassadors and adventure specialists work
+                hand-in-hand with indigenous guides to offer you authentic experiences that most tourists never see.</p>
 
               <div class="mission-box">
                 <div class="mission-icon">
@@ -153,7 +165,8 @@
                       <p>Direct collaboration with indigenous communities</p>
                     </div>
                     <div class="feature-back">
-                      <p>We work exclusively with local guides who are passionate storytellers and cultural ambassadors, ensuring authentic experiences while supporting local economies.</p>
+                      <p>We work exclusively with local guides who are passionate storytellers and cultural ambassadors,
+                        ensuring authentic experiences while supporting local economies.</p>
                     </div>
                   </div>
                 </div>
@@ -168,7 +181,8 @@
                       <p>Comprehensive safety protocols and emergency support</p>
                     </div>
                     <div class="feature-back">
-                      <p>From pre-trip safety briefings to 24/7 emergency response teams, your wellbeing is our top priority on every single adventure.</p>
+                      <p>From pre-trip safety briefings to 24/7 emergency response teams, your wellbeing is our top
+                        priority on every single adventure.</p>
                     </div>
                   </div>
                 </div>
@@ -183,7 +197,8 @@
                       <p>Offsetting 150% of travel emissions</p>
                     </div>
                     <div class="feature-back">
-                      <p>Through reforestation projects and renewable energy investments, we ensure every trip contributes positively to environmental restoration.</p>
+                      <p>Through reforestation projects and renewable energy investments, we ensure every trip
+                        contributes positively to environmental restoration.</p>
                     </div>
                   </div>
                 </div>
@@ -198,7 +213,8 @@
                       <p>Adventures designed around your interests</p>
                     </div>
                     <div class="feature-back">
-                      <p>No cookie-cutter tours here. Every itinerary is customized based on your travel style, fitness level, and personal interests.</p>
+                      <p>No cookie-cutter tours here. Every itinerary is customized based on your travel style, fitness
+                        level, and personal interests.</p>
                     </div>
                   </div>
                 </div>
@@ -213,7 +229,8 @@
                       <p>Life happens, we understand</p>
                     </div>
                     <div class="feature-back">
-                      <p>Free cancellation up to 30 days before departure, easy date changes, and comprehensive travel insurance options give you peace of mind.</p>
+                      <p>Free cancellation up to 30 days before departure, easy date changes, and comprehensive travel
+                        insurance options give you peace of mind.</p>
                     </div>
                   </div>
                 </div>
@@ -228,7 +245,8 @@
                       <p>Experiences that transform perspectives</p>
                     </div>
                     <div class="feature-back">
-                      <p>Our travelers often say their journey with us changed their outlook on life. We create moments that become treasured memories for years to come.</p>
+                      <p>Our travelers often say their journey with us changed their outlook on life. We create moments
+                        that become treasured memories for years to come.</p>
                     </div>
                   </div>
                 </div>
@@ -294,23 +312,24 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../public/vendor/php-email-form/validate.js"></script>
-  <script src="../public/vendor/aos/aos.js"></script>
-  <script src="../public/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../public/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../public/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="../public/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/php-email-form/validate.js"></script>
+  <script src="../vendor/aos/aos.js"></script>
+  <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="../public/js/main.js"></script>
+  <script src="../js/main.js"></script>
 
 </body>
 
