--- a/pages/car.html
+++ b/pages/car.html
@@ -15,14 +15,16 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../public/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="../public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../vendor/aos/aos.css" rel="stylesheet">
+  <link href="../vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="../css/main.css" rel="stylesheet">
@@ -39,7 +41,8 @@
 <body class="shopping-cart-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div
+      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
@@ -50,15 +53,16 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="/pages/about.html">Sobre Nosotros</a></li>
-          <li><a href="/pages/destinations.html">Destinos</a></li>
-          <li><a href="/pages/tours.html">Tours</a></li>
-          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
+          <li><a href="about.html">Sobre Nosotros</a></li>
+          <li><a href="destinations.html">Destinos</a></li>
+          <li><a href="tours.html">Tours</a></li>
+          <li><a href="login.html">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
+          class="badge bg-danger">2</span></a>
 
       <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
 
@@ -68,7 +72,8 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(/assets/img/travel/showcase-8.webp);">
+    <div class="page-title dark-background" data-aos="fade"
+      style="background-image: url(/assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
         <h1>Carrito de Compra</h1>
         <p>Mira tus reservas y realiza el pago.</p>
@@ -112,7 +117,8 @@
                 <div class="item-price">$899</div>
                 <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></button>
               </div>
-              <a href="/pages/tours.html" class="btn btn-outline-primary mt-3"><i class="bi bi-plus-circle"></i> Add New Items</a>
+              <a href="/pages/tours.html" class="btn btn-outline-primary mt-3"><i class="bi bi-plus-circle"></i> Add New
+                Items</a>
             </div>
           </div>
           <div class="col-lg-4">
@@ -203,23 +209,24 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../public/vendor/php-email-form/validate.js"></script>
-  <script src="../public/vendor/aos/aos.js"></script>
-  <script src="../public/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../public/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../public/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src=".../public/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/php-email-form/validate.js"></script>
+  <script src="../vendor/aos/aos.js"></script>
+  <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="../public/js/main.js"></script>
+  <script src="../js/main.js"></script>
 
 </body>
 
