--- a/pages/login.html
+++ b/pages/login.html
@@ -20,11 +20,11 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../public/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="../public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../vendor/aos/aos.css" rel="stylesheet">
+  <link href="../vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="../css/main.css" rel="stylesheet">
@@ -53,18 +53,17 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="/pages/about.html">Sobre Nosotros</a></li>
-          <li><a href="/pages/destinations.html">Destinos</a></li>
-          <li><a href="/pages/tours.html">Tours</a></li>
-          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
+          <li><a href="about.html">Sobre Nosotros</a></li>
+          <li><a href="destinations.html">Destinos</a></li>
+          <li><a href="tours.html">Tours</a></li>
+          <li><a href="login.html" class="active">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
-          class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
 
-      <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
+      <a class="btn-getstarted" href="register.html">Registrarse</a>
 
     </div>
   </header>
@@ -181,17 +180,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../public/vendor/php-email-form/validate.js"></script>
-  <script src="../public/vendor/aos/aos.js"></script>
-  <script src="../public/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../public/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../public/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="../public/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/php-email-form/validate.js"></script>
+  <script src="../vendor/aos/aos.js"></script>
+  <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="../public/js/main.js"></script>
+  <script src="../js/main.js"></script>
   <script type="module" src="../src/controllers/AuthController.js"></script>
 
 </body>
